App after solving data problem

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "package-linux": "electron-packager . Vrapeutic --overwrite --asar=true --platform=linux --arch=x64 --icon=1024x1024.png --prune=true --out=release-builds --extraResource=dist/vrapeutic-desktop/assets/modules/ --ignore=release-builds/",
     "package-win": "electron-packager . Vrapeutic --overwrite --asar=false --platform=win32 --arch=x64 --icon=icon.png.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Vrapeutic Desktop App \" "
   },
-  "repository": "https://github.com/YahyaAlaaMassoud/nebular-desktop",
+  "repository": "https://github.com/vrapeutic/OpenDesktopApp.git",
   "build": {
     "appId": "com.myvrapeutic.vrapeutic-desktop",
     "productName": "VRapeutic Desktop",
@@ -37,7 +37,7 @@
     "publish": [
       {
         "provider": "github",
-        "owner": "YahyaAlaaMassoud",
+        "owner": "VRapeutic-ink",
         "repo": "nebular-desktop",
         "vPrefixedTagName": true
       }
