--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@electron-forge/maker-squirrel": "^6.1.1",
         "@electron-forge/maker-zip": "^6.1.1",
         "@electron-forge/plugin-webpack": "^6.1.1",
+        "@electron-forge/publisher-github": "^6.1.1",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^14.0.0",
         "@testing-library/user-event": "^14.4.3",
@@ -50,6 +51,7 @@
         "@chakra-ui/react": "^2.5.5",
         "@emotion/react": "^11.10.6",
         "@emotion/styled": "^11.10.6",
+        "dotenv": "^16.0.3",
         "electron-squirrel-startup": "^1.0.0",
         "framer-motion": "^10.12.4",
         "react": "^18.2.0",
