--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -15,6 +15,8 @@ jobs:
 
         steps:
             - uses: actions/checkout@v2
+              with:
+                  ref: my-branch
             - uses: actions/setup-node@master
               with:
                   node-version: 18
