--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "url-loader": "^4.1.1"
     },
     "dependencies": {
+        "@chakra-ui/icons": "^2.0.19",
         "@chakra-ui/react": "^2.5.5",
         "@emotion/react": "^11.10.6",
         "@emotion/styled": "^11.10.6",
