--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "@emotion/styled": "^11.10.6",
         "electron-squirrel-startup": "^1.0.0",
         "framer-motion": "^10.12.4",
+        "joi": "^17.9.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "web-vitals": "^3.3.1"
