--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -24,5 +24,5 @@ jobs:
               run: npm ci
             - name: publish
               env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  GH_TOKEN: ${{ secrets.GH_TOKEN }}
               run: npm run publish
