--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "@chakra-ui/react": "^2.5.5",
         "@emotion/react": "^11.10.6",
         "@emotion/styled": "^11.10.6",
+        "@tanstack/react-query": "^4.29.5",
         "axios": "^1.4.0",
         "dotenv": "^16.0.3",
         "electron-squirrel-startup": "^1.0.0",
