--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "joi": "^17.9.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "recharts": "^2.6.2",
         "web-vitals": "^3.3.1"
     }
 }
