--- a/package.json
+++ b/package.json
@@ -54,13 +54,16 @@
         "@emotion/react": "^11.10.6",
         "@emotion/styled": "^11.10.6",
         "@tanstack/react-query": "^4.29.5",
+        "apexcharts": "^3.40.0",
         "axios": "^1.4.0",
         "dotenv": "^16.0.3",
         "electron-squirrel-startup": "^1.0.0",
         "framer-motion": "^10.12.4",
         "joi": "^17.9.2",
         "react": "^18.2.0",
+        "react-apexcharts": "^1.4.0",
         "react-dom": "^18.2.0",
+        "react-query": "^3.39.3",
         "react-router-dom": "^6.11.1",
         "web-vitals": "^3.3.1"
     }
