--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@tanstack/react-query": "^4.29.5",
+    "apexcharts": "^3.44.0",
     "axios": "^1.4.0",
     "chakra-ui-steps": "^2.1.0",
     "dotenv": "^16.0.3",
@@ -65,6 +66,7 @@
     "framer-motion": "^10.12.4",
     "joi": "^17.9.2",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-otp-input": "^3.1.0",
