--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "electron-store": "^8.1.0",
         "framer-motion": "^10.12.4",
         "joi": "^17.9.2",
+        "prettier-format": "^4.0.0",
         "react": "^18.2.0",
         "react-apexcharts": "^1.4.1",
         "react-dom": "^18.2.0",
