--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "dotenv": "^16.0.3",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.1.0",
+    "electron-winstaller": "^5.2.1",
     "framer-motion": "^10.12.4",
     "joi": "^17.9.2",
     "react": "^18.2.0",
