--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "object-to-formdata": "^4.5.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
