--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/node": "^18.15.13",
     "@types/reach__router": "^1.3.11",
     "@types/react": "^18.0.38",
+    "@types/react-datepicker": "^4.19.5",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
