--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.2",
     "@tanstack/react-query": "^4.29.5",
+    "@types/express": "^4.17.21",
     "apexcharts": "^3.44.0",
     "axios": "^1.4.0",
     "babel-loader": "^9.1.3",
@@ -69,6 +70,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.1.0",
     "electron-winstaller": "^5.2.1",
+    "express": "^4.18.3",
     "framer-motion": "^10.12.4",
     "joi": "^17.9.2",
     "object-to-formdata": "^4.5.1",
@@ -81,6 +83,7 @@
     "react-otp-input": "^3.1.0",
     "react-router-dom": "^6.11.1",
     "react-select": "^5.7.7",
-    "web-vitals": "^3.3.1"
+    "web-vitals": "^3.3.1",
+    "yarn": "^1.22.21"
   }
 }
