--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react-otp-input": "^3.1.0",
     "react-router-dom": "^6.11.1",
     "react-select": "^5.7.7",
+    "recharts": "^2.12.6",
     "web-vitals": "^3.3.1"
   }
 }
