--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@typescript-eslint/parser": "^5.0.0",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
     "css-loader": "^6.0.0",
+    "csv-loader": "^3.0.5",
     "electron": "24.1.2",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.0",
@@ -47,7 +48,7 @@
     "node-loader": "^2.0.0",
     "prettier": "^3.0.3",
     "style-loader": "^3.0.0",
-    "ts-loader": "^9.2.2",
+    "ts-loader": "^9.5.1",
     "ts-node": "^10.0.0",
     "typescript": "~4.5.4",
     "url-loader": "^4.1.1"
@@ -76,6 +77,7 @@
     "framer-motion": "^10.12.4",
     "joi": "^17.9.2",
     "object-to-formdata": "^4.5.1",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-datepicker": "^4.25.0",
