--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/electron-store": "^3.2.0",
     "@types/jest": "^29.5.1",
     "@types/node": "^18.15.13",
+    "@types/papaparse": "^5.3.14",
     "@types/reach__router": "^1.3.11",
     "@types/react": "^18.0.38",
     "@types/react-datepicker": "^4.19.5",
@@ -89,6 +90,6 @@
     "react-select": "^5.7.7",
     "socket.io": "^4.7.5",
     "web-vitals": "^3.3.1",
-    "yarn": "^1.22.21"
+    "yarn": "^1.22.22"
   }
 }
