--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "@typescript-eslint/parser": "^5.0.0",
     "@vercel/webpack-asset-relocator-loader": "1.7.3",
     "css-loader": "^6.0.0",
-    "csv-loader": "^3.0.5",
-    "electron": "24.1.2",
+    "electron": "^24.1.2",
     "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
@@ -88,10 +87,8 @@
     "react-otp-input": "^3.1.0",
     "react-router-dom": "^6.11.1",
     "react-select": "^5.7.7",
-    "web-vitals": "^3.3.1",
     "recharts": "^2.12.6",
     "socket.io": "^4.7.5",
-
-
+    "web-vitals": "^3.3.1"
   }
 }
