--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "chakra-ui-steps": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "electron-forge": "^5.2.4",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.1.0",
     "electron-winstaller": "^5.2.1",
