--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/electron-store": "^3.2.0",
     "@types/jest": "^29.5.1",
+    "@types/mdns": "^0.0.38",
     "@types/node": "^18.15.13",
     "@types/papaparse": "^5.3.14",
     "@types/reach__router": "^1.3.11",
@@ -67,6 +68,7 @@
     "apexcharts": "^3.44.0",
     "axios": "^1.4.0",
     "babel-loader": "^9.1.3",
+    "body-parser": "^1.20.2",
     "chakra-ui-steps": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -74,9 +76,11 @@
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.1.0",
     "electron-winstaller": "^5.2.1",
-    "express": "^4.19.1",
+    "express": "^4.19.2",
     "framer-motion": "^10.12.4",
+    "http": "^0.0.1-security",
     "joi": "^17.9.2",
+    "mdns": "^2.7.2",
     "object-to-formdata": "^4.5.1",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
@@ -90,6 +94,7 @@
     "react-select": "^5.7.7",
     "recharts": "^2.12.6",
     "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "web-vitals": "^3.3.1"
   }
 }
