--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.2",
     "@tanstack/react-query": "^4.29.5",
+    "@timfish/forge-externals-plugin": "^0.2.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "apexcharts": "^3.44.0",
