--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "babel-loader": "^9.1.3",
     "chakra-ui-steps": "^2.1.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.0.3",
     "electron-forge": "^5.2.4",
     "electron-squirrel-startup": "^1.0.0",
@@ -85,6 +86,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
+    "react-native-fs": "^2.20.0",
     "react-otp-input": "^3.1.0",
     "react-router-dom": "^6.11.1",
     "react-select": "^5.7.7",
