--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,26 +1,11 @@
-name: Release
-on:
-  release:
-    types:
-      - created
-
 jobs:
-  publish_on_mac:
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@master
-        with:
-          node-version: 16
-      - name: install dependencies
-        run: npm install
-      - name: publish
-        env:
-          GITHUB_TOKEN: ${{ process.env.GH_TOKEN }}
-        run: npm run publish
+  release:
+    runs-on: ${{ matrix.os }}
 
-  publish_on_win:
-    runs-on: windows-latest
+    strategy:
+      matrix:
+        os: [macos-latest, ubuntu-latest, windows-latest]
+
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@master
@@ -30,5 +15,5 @@ jobs:
         run: npm install
       - name: publish
         env:
-          GITHUB_TOKEN: ${{ process.env.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npm run publish
