--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@google-cloud/translate": "^8.5.0",
     "@hookform/resolvers": "^3.3.2",
     "@tanstack/react-query": "^4.29.5",
     "@timfish/forge-externals-plugin": "^0.2.1",
